--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@mdx-js/react": "^1.6.18",
     "classnames": "^2.2.6",
     "github-markdown-css": "^4.0.0",
-    "next": "10.0.0",
+    "next": "~10.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "next-mdx-enhanced": "^4.0.0",
